Fixed radio button spacing
https://eaflood.atlassian.net/browse/WE-1042

When radio buttons had no hint text they were too close together.

--- a/src/assets/sass/patterns/_permit-select.scss
+++ b/src/assets/sass/patterns/_permit-select.scss
@@ -10,6 +10,7 @@ label.permit-item {
 
   .permit-name {
     float: left;
+    min-height: 50px;
     width: 66.66667%;
 
     @include media(mobile) {
